--- a/app/src/main/res/layout/fragment_found_car.xml
+++ b/app/src/main/res/layout/fragment_found_car.xml
@@ -13,96 +13,165 @@
         android:layout_height="match_parent"
         android:background="@color/beige">
 
-        <TextView
-            android:id="@+id/foundModel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="176dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="177dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="model"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.444"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/foundMake" />
-
-        <TextView
-            android:id="@+id/foundMake"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="176dp"
-            android:layout_marginTop="180dp"
-            android:layout_marginEnd="177dp"
-            android:layout_marginBottom="17dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="make"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/foundModel"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/foundColor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="175dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="178dp"
-            android:layout_marginBottom="436dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="color"
-            android:textSize="24sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/foundModel" />
-
-        <TextView
-            android:id="@+id/foundPN"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="175dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="178dp"
-            android:layout_marginBottom="397dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="plate number"
-            android:textSize="24sp"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView2"
+            android:layout_width="342dp"
+            android:layout_height="393dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="100dp"
+            android:padding="8dp"
+            app:cardCornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/foundColor" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="157dp"
+                    android:layout_height="32dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Plate Number:"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="67dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Color: "
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="76dp"
+                    android:layout_height="30dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Model: "
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+                <TextView
+                    android:id="@+id/textView8"
+                    android:layout_width="68dp"
+                    android:layout_height="29dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="80dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="Make: "
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/CarID"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:background="@color/yellow"
+                    android:fontFamily="sans-serif-medium"
+                    android:paddingStart="50px"
+                    android:paddingTop="25px"
+                    android:paddingRight="50px"
+                    android:text="CarID"
+                    android:textAlignment="textStart"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/foundModel"
+                    android:layout_width="156dp"
+                    android:layout_height="27dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="model"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toEndOf="@+id/textView10"
+                    app:layout_constraintTop_toBottomOf="@+id/foundMake" />
+
+                <TextView
+                    android:id="@+id/foundMake"
+                    android:layout_width="159dp"
+                    android:layout_height="31dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="30dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="make"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toEndOf="@+id/textView8"
+                    app:layout_constraintTop_toBottomOf="@+id/CarID" />
+
+                <TextView
+                    android:id="@+id/foundPN"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="24dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="plate number"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toEndOf="@+id/textView12"
+                    app:layout_constraintTop_toBottomOf="@+id/foundColor" />
+
+                <TextView
+                    android:id="@+id/foundColor"
+                    android:layout_width="167dp"
+                    android:layout_height="27dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="20dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:text="color"
+                    android:textSize="24sp"
+                    app:layout_constraintStart_toEndOf="@+id/textView11"
+                    app:layout_constraintTop_toBottomOf="@+id/foundModel" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.cardview.widget.CardView>
 
         <Button
             android:id="@+id/addViolationFromFound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="69dp"
-            android:layout_marginTop="39dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="50dp"
             android:text="Add Violation"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/foundPN" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
         <Button
             android:id="@+id/backToScanButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="39dp"
-            android:layout_marginEnd="52dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="50dp"
             android:text="Scan more"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/foundPN" />
+            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
 
         <ImageButton
             android:id="@+id/buttonBackFound"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="25dp"
             android:layout_marginTop="20dp"
             android:backgroundTint="@color/yellow"
             android:src="?attr/actionModeCloseDrawable"
